[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/DEFAULT_NORMAL.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/DEFAULT_ITALICS.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/DEFAULT_BOLD.tres" type="DynamicFont" id=3]
[ext_resource path="res://GodetteVN/fundamentals/details/nvlBox.gd" type="Script" id=4]

[node name="nvlBox" type="RichTextLabel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -550.0
margin_top = 50.0
margin_right = 550.0
margin_bottom = 850.0
rect_min_size = Vector2( 1100, 800 )
mouse_filter = 2
custom_fonts/italics_font = ExtResource( 2 )
custom_fonts/bold_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 1 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
bbcode_enabled = true
visible_characters = 0
scroll_following = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]

[node name="autoTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="autoTimer" to="." method="_on_autoTimer_timeout"]
